[QtLocation] Use Qt event loop to emit signals from GLib callbacks. Contributes to JB#34945

This commit ensures that we use Qt::QueuedConnection to emit signals
(or invoke functions which emit signals) within codepaths which are
entered from the glib event loop, to avoid QTBUG-18434.

Contributes to JB#34945