src/plugins/position/geoclue/qgeopositioninfosource_geocluemaster.cpp
@@ -200,7 +200,8 @@ void QGeoPositionInfoSourceGeoclueMaster::regularUpdateFailed()
     m_lastVelocityIsFresh = false;
     if (m_running && !m_regularUpdateTimedOut) {
         m_regularUpdateTimedOut = true;
-        emit updateTimeout();
+        // use a QueuedConnection to emit the signal to ensure that we enter the Qt event loop.
+        QMetaObject::invokeMethod(this, "updateTimeout", Qt::QueuedConnection);
     }
 }
 
@@ -244,7 +245,8 @@ void QGeoPositionInfoSourceGeoclueMaster::updatePosition(GeocluePositionFields f
 
     m_regularUpdateTimedOut = false;
 
-    emit positionUpdated(m_lastPosition);
+    // use a QueuedConnection to emit the signal to ensure that we enter the Qt event loop.
+    QMetaObject::invokeMethod(this, "positionUpdated", Qt::QueuedConnection, Q_ARG(QGeoPositionInfo, m_lastPosition));
 
 #ifdef Q_LOCATION_GEOCLUE_DEBUG
     qDebug() << "Lat, lon, alt, speed:"
