src/plugins/position/geoclue/qgeosatelliteinfosource_geocluemaster.cpp
@@ -81,7 +81,13 @@ void satellite_changed(GeoclueSatellite *satellite, int timestamp, int satellite
         satInfos.append(satInfo);
     }
 
-    source->satelliteChanged(timestamp, satellite_used, satellite_visible, usedPrns, satInfos);
+    // use a QueuedConnection to ensure that we enter the Qt event loop.
+    QMetaObject::invokeMethod(source, "satelliteChanged", Qt::QueuedConnection,
+                              Q_ARG(int, timestamp),
+                              Q_ARG(int, satellite_used),
+                              Q_ARG(int, satellite_visible),
+                              Q_ARG(QList<int>, usedPrns),
+                              Q_ARG(QList<QGeoSatelliteInfo>, satInfos));
 }
 
 void satellite_callback(GeoclueSatellite *satellite, int timestamp, int satellite_used,
@@ -116,7 +122,13 @@ void satellite_callback(GeoclueSatellite *satellite, int timestamp, int satellit
         satInfos.append(satInfo);
     }
 
-    source->requestUpdateFinished(timestamp, satellite_used, satellite_visible, usedPrns, satInfos);
+    // use a QueuedConnection to ensure that we enter the Qt event loop.
+    QMetaObject::invokeMethod(source, "requestUpdateFinished", Qt::QueuedConnection,
+                              Q_ARG(int, timestamp),
+                              Q_ARG(int, satellite_used),
+                              Q_ARG(int, satellite_visible),
+                              Q_ARG(QList<int>, usedPrns),
+                              Q_ARG(QList<QGeoSatelliteInfo>, satInfos));
 }
 
 }
